@@ -1,3 +1,13 @@
+2006-02-28  Kristian Høgsberg  <krh@redhat.com>
+
+	* goo/gmem.c: (gmalloc), (grealloc):
+	* poppler/JBIG2Stream.cc:
+	* poppler/Stream.cc:
+	* poppler/Stream.h:
+	* splash/SplashXPathScanner.cc:
+
+	More integer overflow fixes from Derek Noonburg (#5922).
+
 2006-02-09  Kristian Høgsberg  <krh@redhat.com>
 
 	* configure.ac: Bump realease to 0.4.5.
